# expense-tracker

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  txn_list_2024-01-01_to_2024-07-05.csv
client/: Dockerfile  Dockerfile.streamlit  Makefile  app_dash.py  app_dash_personal.py  app_dash_rent_applicable.py  app_streamlit.py  excel.py  pipdeptree.txt  png.py  pyproject.toml  requirements.txt  streamlit.py  streamlit_app.py  utils.py
client/generators/: generate_png_summary.py
client/kubernetes/: deployment.yaml  service.yaml
client/streamlit/: app.py
client/utils/: constants.py  dash_utils.py  service_utils.py
expense_tracker/datasources/: LunchMoneyDatasource.py  __init__.py  base.py  base_datasource.py  lunch_money.py  lunch_money_datasource.py
expense_tracker/et_types/: BaseDatasourceTypes.py  README.md  StatisticServiceTypes.py  __init__.py  base_datasource_types.py  lunch_money_datasource_types.py  statistic_service_types.py
expense_tracker/services/: StatisticService.py  __init__.py  statistic_service.py
expense_tracker/types/: StatisticServiceTypes.py
expense_tracker/utils/: date_utils.py  settings.py
scripts/: aggregate_financial_transaction_history.py  rename_files.ps1
tests/datasources/: test_lunch_money_datasource.py
tests/services/: test_statistic_service.py
zscripts/: README.md  lunch_money_script.py  manual_test_statistic_service.py  pyproject.toml  txn_list_extract_from_pdf.py
zscripts/lunch_money/: get_all_transactions.py  upload_transactions.py
