[tool.poetry]
name = "expense-aggregate"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

# Ignore poetry package building features
package-mode = false

[tool.poetry.dependencies]
python = "~3.8.10"
loguru = "^0.7.2"
camelot-py = "^0.11.0"
opencv-python = "^4.9.0.80"
ghostscript = "^0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
