[tool.poetry]
name = "expense-aggregate"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

# Ignore poetry package building features
package-mode = false

[tool.poetry.dependencies]
python = "~3.10.11"
loguru = "^0.7.2"
# camelot-py = "^0.11.0"
# opencv-python = "^4.9.0.80"
# ghostscript = "^0.7"
pypdf = "^4.2.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
