[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
arrow = "^1.3.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
pandera = "^0.19.3"
requests = "^2.32.3"
numpy = "1.26"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
faker = "^25.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
