[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.36.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
arrow = "^1.3.0"
expense-tracker = {git = "https://github.com/Borghese-Gladiator/expense-tracker.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
