[tool.poetry]
name = "expense-aggregate"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

# Ignore poetry package building features
package-mode = false

[tool.poetry.dependencies]
python = "~3.10.11"
loguru = "^0.7.2"
pandas = "^2.2.2"
tabula-py = "^2.9.3"
pdfplumber = "^0.11.1"
python-dotenv = "^1.0.1"
expense-tracker = {git = "https://github.com/Borghese-Gladiator/expense-tracker.git"}


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
